--- a/FICHA02/arrays/ex3.html
+++ b/FICHA02/arrays/ex3.html
@@ -57,15 +57,15 @@
         let minInputNumber
         const range = []
         if (firstInput > secondInput) {
-            maxNumber = firstInput
-            minNumber = secondInput
+            maxInputNumber = firstInput
+            minInputNumber = secondInput
         }
         else {
-            maxNumber = secondInput
-            minNumber = firstInput
+            maxInputNumber = secondInput
+            minInputNumber = firstInput
         }
         numbers.forEach(function (number) {
-            if (number >= minNumber && number <= maxNumber) range.push(number)
+            if (number >= minInputNumber && number <= maxInputNumber) range.push(number)
         })
         console.log(range)
     </script>
